# Observation-of-the-whole-vehicle

./: .gitignore  README.md
.cache/clangd/index/: CameraParams.h.0AC976DE03610D9D.idx  armor.hpp.A518190D6DB3D3C4.idx  crc.hpp.152BBBE9EF71CB7E.idx  detector.hpp.221ECE00605C7C0E.idx  detector_node.hpp.E4A066D38E9F4663.idx  extended_kalman_filter.cpp.5D5DBDFDA940CF49.idx  extended_kalman_filter.hpp.EF928654AC6E5708.idx  hik_camera_node.cpp.FB22B44A95D03081.idx  number_classifier.cpp.5DAE770AA0A0532A.idx  packet.hpp.5AAB0F551360E598.idx  pnp_solver.cpp.AD6A32B0F27C8747.idx  rm_serial_driver.hpp.495BE222B66462F3.idx  test_node_startup.cpp.F366540B6BC733D3.idx  test_number_cls.cpp.C61D382BE1C1BA0E.idx  tracker_node.cpp.18B7B8003753C0A9.idx
.history/rm_serial_driver/src/: rm_serial_driver_20241218215757.cpp  rm_serial_driver_20250121104311.cpp
RM/CameraCalibration/: out_camera_data.xml
RM/CameraCalibration/images/: VID5.xml
RM/RM_mission/code/items/印象青大图片提取/: CMakeLists.txt  extract_specific_color  test  视觉处理实例1  视觉处理实例1.cpp
RM/RM_mission/视觉练习题/: .~lock.练习题.docx#  Style Guide.md.md  练习题.docx
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
rm_serial_driver/include/rm_serial_driver/: crc.hpp  packet.hpp  rm_serial_driver.hpp
rm_serial_driver/src/: crc.cpp
rm_vision/rm_vision_bringup/config/: camera_info.yaml  (+1 more)
ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/log/: latest_build
src/rm_auto_aim/: README.md
src/rm_serial_driver-main/: package.xml
src/video_recognition/: package.xml  setup.cfg  setup.py
(+924 files in other folders)
